# perceptron

./: README.md  cli  install  requirements.txt  run  test
docs/: installation.md  theory.md
perceptron/: chart.py  graphx.py  linear_classifier.py  networks.py  plot.py  primitives.py  train.py
perceptron/graphics/: chart.py  plot.py
perceptron/model/: association_layer.py  association_node.py  base_node.py  linear_classifier_network.py  state_layer.py  state_node.py
python3/perceptron/: README.md  README.rst  pyproject.toml
python3/perceptron/docs/: theory.md
python3/perceptron/perceptron/: definitions.py  entrypoint.py  graphx.py  linear_classifier.py  primitives.py
python3/perceptron/tests/: test_perceptron.py
tests/: test_networks.py  test_perceptron.py
