[tool.poetry]
name = "perceptron"
version = "0.1.0"
description = "implementation of the perceptron in python"
authors = ["david barkhuizen <david.barkhuizen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
